Reformatting css + zijbalk fix stretch

--- a/css/mamaMia.css
+++ b/css/mamaMia.css
@@ -242,20 +242,19 @@ header {
 /*FOOTER*/
 
 footer {
-  box-shadow: 0 -1em 1em 0 #155c00,
-    0 1em 1em 0 #af0000;
+  box-shadow: 0 -1em 1em 0 #155c00, 0 1em 1em 0 #af0000;
   margin: 3.5em 0 2em 0;
   padding: 0.1em;
   width: 100%;
   position: sticky;
-  top:calc(100vh - (3em));
+  top: calc(100vh - (3em));
 }
 
 /*----MAIN-----*/
 
 #main {
   margin: 0.6em;
-  margin-bottom: 2.3em;
+  margin-bottom: 0;
   padding: 0;
   border: 2px solid var(--kleur-accent);
   border-radius: var(--border-radius);
@@ -324,15 +323,20 @@ footer {
   padding: 0.75em;
 }
 
-#main .form form > div > div {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-#main .form form > div > div > p {
+#main .form form > div p {
   color: var(--kleur-accent);
   margin: 0.5em;
+}
+
+#main .form form > div .btn {
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+#main .form form > div > div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #main .form form > div + div {
@@ -384,7 +388,6 @@ footer {
 #pizzaMenu select {
   border: 2px solid var(--kleur-main);
 }
-
 
 #pizzaMenu .innerCard {
   margin: 0.5em 0.1em;
@@ -470,7 +473,7 @@ main #side {
   flex-wrap: wrap;
   align-content: flex-start;
   justify-content: center;
-  /* justify-self: stretch; */
+  align-self: stretch;
   margin: 0.75em;
   margin-bottom: 0;
   padding: 0 0.75em;
@@ -543,7 +546,7 @@ main #side {
   max-width: 1.5em;
   min-width: 1.5em;
   height: 1.5em;
-  padding: .1em 0 0 .05em;
+  padding: 0.1em 0 0 0.05em;
 }
 
 /* GEBRUIKER SIDE */
@@ -626,11 +629,9 @@ main #side {
 
 /*-----------------------------------------*/
 
-
 /* min width 450px*/
 
 @media screen and (min-width: 450px) {
-
   #main .form form > div {
     flex-direction: row;
     flex-wrap: wrap;
@@ -666,7 +667,7 @@ main #side {
   #main .form form .btn {
     margin: 0.75em 0 0.5em 0;
   }
-  
+
   #side {
     font-size: 0.9em;
   }
@@ -675,7 +676,6 @@ main #side {
 /* MIN-WIDTH 900px */
 
 @media screen and (min-width: 900px) {
-  
   .wrapper,
   main {
     flex-direction: row;
@@ -686,8 +686,8 @@ main #side {
     max-width: 1150px;
   }
 
-  main{
-    min-height: 70vh;
+  main {
+    min-height: 77vh;
   }
 
   #main {
@@ -699,9 +699,8 @@ main #side {
     order: 1;
     width: 30%;
     min-width: 20em;
-    min-height: 76.5vh;
-    height:100%;
-    max-height: 83vh;
+    min-height: 70%;
+    max-height: 86vh;
     position: sticky;
     top: 5em;
   }
